# ai-agents

./: .gitignore  README.md
literature-review/: .gitignore  AGENT.md  README.md  pyproject.toml
literature-review/.claude/: settings.json  sharp-review.json
literature-review/.claude/agents/: abstract-screener.md  paper-reader.md  query-reviewer.md
literature-review/lenses/: _template.yaml
literature-review/literature_review/: __init__.py  cli.py  models.py
literature-review/literature_review/acquire/: __init__.py  crawl.py  download.py
literature-review/literature_review/ai/: __init__.py  client.py
literature-review/literature_review/browser/: __init__.py  download.py  login.py
literature-review/literature_review/export/: __init__.py  plot.py  render.py  zotero.py
literature-review/literature_review/pipeline/: __init__.py  acquire.py  brief.py  ingest.py  orchestrator.py  query.py  screen.py  search.py
literature-review/literature_review/providers/: __init__.py  arxiv.py  base.py  dblp.py  ieee.py  semantic_scholar.py
literature-review/literature_review/review/: __init__.py  extract.py  reader.py  screen.py  synthesis.py
literature-review/literature_review/schemas/: __init__.py  _common.json  candidate.schema.json  download_manifest.schema.json  download_queue.schema.json  ingest_manifest.schema.json  paper_card.schema.json  queries.schema.json  research_brief.schema.json  (+2 more)
literature-review/templates/: download-checklist.md  ingest-errors.md  paper-card-template.md  query-planning-guide.md  research-brief-template.md
literature-review/tests/: __init__.py  conftest.py  test_arxiv_parse.py  test_cli_smoke.py  test_fixes_regression.py  test_models_serde.py  test_retry_and_serde_hardening.py  test_schema_validation.py
(+309 files in other folders)
