[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "literature-review"
version = "0.2.0"
description = "Agent-orchestrated systematic literature review pipeline"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
    "jsonschema[format]>=4.25",
    "playwright>=1.61",
    "pypdf>=6.14",
    "paper-pdf-ingest",
]

[project.scripts]
lit-review = "literature_review.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["literature_review"]
