[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "literature-review"
version = "0.3.0"
description = "Agent-orchestrated systematic literature review pipeline"
requires-python = ">=3.12"
dependencies = [
    "rtoml>=0.11",
    "playwright>=1.61",
    "pypdf>=6.14",
    "paper-pdf-ingest @ git+https://github.com/DawnEver/paper_pdf_ingest.git",
]

[project.optional-dependencies]
ai = ["litellm>=1.77"]

[project.scripts]
lit-review = "literature_review.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["literature_review"]
